--- a/Index.html
+++ b/Index.html
@@ -19,13 +19,27 @@
         </nav>
 
         <div class="user-auth">
-            <button type="button" class="login-btn-modal">Login</button>
+            <div class="profile-box" style="display: none;">
+                <div class="avatar-circle">C</div>
+                <div class="dropdown">
+                    <a href="#">My Account</a>
+                    <a href="#">Logout</a>
+                </div>
+            </div>
+            <button type="button" class="login-btn-modal" >Login</button>
         </div>
     </header>
 
     <section>
         <h1>Hey Developer!</h1>
     </section>
+
+    <div class="alert-box" style="display: none;">
+        <div class="alert success">
+            <i class='bx  bx-check'  ></i> 
+            <span>Registration Successful</span>
+        </div>
+    </div>
 
     <div class="auth-modal">
         <button type="button" class="close-btn-modal"><i class='bx  bxs-x'  ></i></button>
